--- a/breakout.css
+++ b/breakout.css
@@ -4,4 +4,7 @@ body{
 
 #board{
     background-color: black;
+    border-top: 5px solid skyblue;
+    border-left: 5px solid skyblue;
+    border-right: 5px solid skyblue;
 }
